feat(message): [+]添加对于信息状态的改变
